tests/NormalTests/paczka1/fuzzy1/72627229.err
Error in line 4: ftXHzvLR A458 14,6
Error in line 22: ftXHzvLR S446 53,7
Error in line 19: ZwkT1d9Fuua A458 88,0
